increase docker java runtime heapsize